--- a/style.css
+++ b/style.css
@@ -19,8 +19,9 @@ body{
 
 }
 #calendarContainer{
- display: flex;
- justify-content: end;
+ /* display: flex; */
+ /* justify-content: end; */
+ position: relative;
 }
 
 #calendarDiv{
@@ -29,7 +30,7 @@ body{
     margin: auto;
     align-content: center;
     text-align: center;
-   
+   width: 25%
 
 }
 #calendarHeading{
@@ -73,35 +74,78 @@ body{
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
-    display: inline-block;
+    /* display: inline-block; */
     font-size: 16px;
     width: 400px;
     border-radius: 5px;
     text-transform: uppercase;
 }
 
-.notes{
+.notes-div {
+    width: 100%;
     display: flex;
-  
-    align-items: center; 
-    /* justify-content: center;  */
-    flex-direction: column; 
-    min-width: 500px;
-    text-align: center; 
-    /* min-height: 400px;  */
-    background-color: white; 
-    align-items: center; 
+    justify-content: center;
+    flex-direction: column;
+    position:absolute;
+}
 
-    border-radius: 10px;
+.notes{
+    /* position:absolute; */
 }
 .notes div{
     padding: 10px;
 }
 
-.notes button{
-    /* padding: 10px; */
-}
+/* .displayArea {
+    font-style: white;
+} */
+
 .container{
-    display: flex;
-    justify-content: space-around;
+    /* display: flex;
+    justify-content: center; */
+    /* width: 30%; */
 }
+
+.tree-div {
+    position: absolute;
+    display: flex;
+    justify-content: start;
+    flex-direction: row;
+    width: 30%;
+    height:80%;
+    top: 15px;
+    left: 15px;
+  }
+
+  
+svg {
+    width: 100%;
+    height: 100%;  
+    position: absolute;
+    display: flex;
+    justify-content: start;
+  }
+  
+/* button {
+    position: relative;
+    top: 15px;
+    left: 15px;
+    
+    background: yellowgreen;
+    border: 1px solid rgba(0,0,0,0.2);
+    padding: 5px 8px;
+    font-weight: bold;  
+    color: #222;
+    transition: all 0.1s;
+    box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37);
+    
+    &:focus {
+      outline: none;
+    }
+    
+    &:hover {
+      border: 1px solid rgba(0,0,0,0.5);
+      color: black;
+    }
+  } */
+
