--- a/style.css
+++ b/style.css
@@ -55,11 +55,15 @@ body{
     padding: 10px;
     text-align: center;
     border-radius: 50px;
-    /* border: 2px solid black; */
-    /* background-color: antiquewhite; */
+    border: 10px;
+    border-color: #3e8e41;
 }
-
-
+  
+  .day:active {
+    background-color: #3e8e41;
+    box-shadow: 0 5px #666;
+    transform: translateY(4px);
+  }
 
 .inputForm {
     display: none;
@@ -86,11 +90,12 @@ body{
     display: flex;
     justify-content: center;
     flex-direction: column;
-    position:absolute;
+ 
 }
 
 .notes{
     /* position:absolute; */
+
 }
 .notes div{
     padding: 10px;
